
[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio-postgres = "0.7.6"
num_cpus = "1.13.1"
actix-rt = "2.7.0"
actix-web = "4.0.1"
serde = "1.0.137"
tokio = "1.18.2"
serde_derive = "1.0.137"
env_logger = "0.9.0"
deadpool-postgres = "0.10.2"
tokio-pg-mapper = "0.2.0"
derive_more = "0.99.17"