[package]
name = "updater"
version = "2.0.0-STABLE"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
num_cpus = "1.13.1"
actix-rt = "2.7.0"
actix-web = "4.0.1"
tokio-postgres = "0.7.6"
tokio = {version = "1.19.1", features = ["rt-multi-thread"]}
serde = "1.0.137"
deadpool-postgres = "0.10.2"
tokio-pg-mapper = "0.2.0"
serde_derive = "1.0.137"
env_logger = "0.9.0"
derive_more = "0.99.17"
async-std = "1.11.0"
futures-cpupool = "0.1.8"
chrono = "0.4.19"
substring = "1.4.5"
log = "0.4"